--- a/front/styles/light.css
+++ b/front/styles/light.css
@@ -8,6 +8,7 @@
   --text-color: var(--button-color);
   --content-subtitle-color: var(--button-color);
   --display-rec: none;
+  --imgg: url(../images/logo_dark.png)
 }
 
 .page.theme_light {
@@ -18,6 +19,10 @@
   */
   background-color: #ffffff;
 }
+/* .logo {
+  background-image: url(../images/logo_dark.png)}; */
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -30,6 +35,7 @@
     --text-color: var(--button-color);
     --content-subtitle-color: var(--button-color);
     --display-rec: none;
+    --imgg: url(../images/logo_dark.png)
   }
   .page {
     /* сохрани этот селектор в приведённом виде.
@@ -39,4 +45,8 @@
     background-color: #ffffff;
     
   }
+  .logo {
+    background-image: url(../images/logo_dark.png);}
+  
 }
+
