--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -1,5 +1,7 @@
 .preloader {
-  display: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .preloader_visible {
@@ -25,10 +27,10 @@
 }
 
 .logo {
-  background-image: url(../images/icon3.png);
+  background-image: var(--imgg);
   background-size: contain;
   background-repeat: no-repeat;
-  width: 100px;
+  width: 200px;
   height: 100px;
   margin: 20px;
 }
@@ -66,6 +68,8 @@
 }
 
 .section__form {
+  color: var(--text-color);
+  font-family: var(--font-main);
   margin-block-start: 52px;
   display: flex;
   gap: 32px;
@@ -73,6 +77,10 @@
   align-items: center;
 }
 
+.time_text {
+  margin-top: 50px;
+  margin-bottom: 68px;
+}
 
 .input__place {
   display: flex;
@@ -144,7 +152,8 @@
 
 .header {
   display: grid;
-  grid-template-rows: 2fr 1fr;
+  grid-template-rows: 1fr;
+  margin-bottom: 25px;
   align-items: center;
 }
 
@@ -199,15 +208,41 @@
 }
 
 .footer {
-  margin-top: 50px;
+  border-top: dotted 1px var(--accent-color);
+  font-family: var(--font-main);
+  color: var(--title-text);
+  margin-top: 100px;
   width: 100%;
-  padding-block: 50px;
   height: 10vh;
   display: flex;
-  gap: 20px;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 20px;
+}
+.contacts {
+  color: var(--title-text);
+}
+
+.credits {
+  align-self: end;
+  color: var(--title-text);
+}
+
+.credits_art {
+  color: var(--title-text);
+  font-family: var(--font-main), sans-serif;
+  font-size: var(--font-size-normal);
+  font-weight: 400;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.contact__link {
+  text-decoration: none;
+}
+
+.contact__link:hover {
+  text-decoration: underline;
 }
 
 .link {
@@ -244,7 +279,7 @@
 
 .lds-ring {
   /* change color here */
-  color: #1c4c5b;
+  color: var(--accent-color);
 }
 .lds-ring,
 .lds-ring div {
